# CP-Companion

./: package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clist.rs  database.rs  lib.rs  main.rs
src/components/: CalendarView.tsx  ContestCard.tsx  RainmeterWidget.tsx  WidgetView.tsx
src/stores/: useContestStore.ts
src/utils/: time.ts
